# quickboard

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: beginner_example.md  component_gallery.md
docs/data/: data_a.tsv  data_b.tsv
quickboard/: app.py  dashsetup.py  styles.py
quickboard/base/: __init__.py  _datamanager.py  _dynamicpanel.py  _panel.py  basetab.py  contentgrid.py  controlplugin.py  datapanel.py  plotpanel.py  quickboard.py  sidebar.py
quickboard/plugins/: __init__.py  datadisplay.py  datafilterchecklist.py  datafilterdropdown.py  datafilterradiobuttons.py  datafilterrangeslider.py  datafilterslider.py  datasumchecklist.py  plotinputdropdown.py  plotinputradiobuttons.py  plotinputrangeslider.py  plotinputslider.py
quickboard/plugins/templates/: __init__.py  checklist.py  dropdown.py  radiobuttons.py  rangeslider.py  slider.py
quickboard/primitives/: __init__.py  _datamanager.py  _panel.py  controlplugin.py
quickboard/textboxes/: __init__.py  getupdatedtext.py
quickboard/utils/: decorators.py  environment.py
test/: __init__.py  run_tests.py  test_template.py
test/unit/: plotpanel_test.py  plugins_test.py
