[metadata]
name = quickboard
version = 0.2.1
url = https://github.com/broadinstitute/quickboard
download_url = https://github.com/broadinstitute/quickboard
author = Ricky Magner
author_email = rmagner@broadinstitute.org
description = "A simple Python package for creating quick, modular dashboards."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Dash
    License :: OSI Approved :: BSD License
    Programming Language :: Python
keywords = dash, dashboard, interactive, plot, graph

[options]
packages = find:
install_requires =
    dash==2.3.1
    dash_bootstrap_components==1.1.0
    jupyter_dash==0.4.2
    numpy>=1.21.0
    pandas>=1.3.0

[options.packages.find]
exclude =
    examples*
    docs*

