[metadata]
name = quickboard
version = 0.4.0-dev
url = https://github.com/broadinstitute/quickboard
download_url = https://github.com/broadinstitute/quickboard
author = Ricky Magner
author_email = rmagner@broadinstitute.org
description = "A simple Python package for creating quick, modular dashboards."
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Dash
    License :: OSI Approved :: BSD License
    Programming Language :: Python
keywords = dash, dashboard, interactive, plot, graph

[options]
packages = find:
install_requires =
    dash>=2.16.0
    dash_bootstrap_components>=1.5.0
    plotly>=5.20.0
    numpy>=1.25.0
    pandas>=2.2.1

[options.packages.find]
exclude =
    examples*
    docs*

